; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___SYS_GetSystemTime.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___SYS_GetSystemTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @__SYS_GetSystemTime() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64*, align 8
  store i64* inttoptr (i64 2147496152 to i64*), i64** %3, align 8
  %4 = load i32, i32* %1, align 4
  %5 = call i32 @_CPU_ISR_Disable(i32 %4)
  %6 = call i64 (...) @gettime()
  store i64 %6, i64* %2, align 8
  %7 = load i64*, i64** %3, align 8
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %2, align 8
  %10 = add nsw i64 %9, %8
  store i64 %10, i64* %2, align 8
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @_CPU_ISR_Restore(i32 %11)
  %13 = load i64, i64* %2, align 8
  ret i64 %13
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i64 @gettime(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
